# data-cleaning-openenv

./: .dockerignore  Dockerfile  LICENSE  README.md  TODO.md  __init__.py  app.py  client.py  environment.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  results.json  tasks.py
server/: __init__.py  app.py  environment.py  workbench_environment.py
